force-app/main/default/objects/Split_Payee__c/Split_Payee__c.object-meta.xml
<CustomObject>
    <label>Split Payee</label>
    <nameField>
        <label>Split Payee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Split Payees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>