force-app/main/default/objects/Split_Payee__c/fields/Bonus_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Percentage__c</fullName>
    <label>Bonus Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>