force-app/main/default/objects/Split_Payee__c/fields/Book_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Book_of_Business__c</fullName>
    <label>Book of Business</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>