force-app/main/default/objects/Split_Payee__c/fields/Brokerage_Split__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Split__c</fullName>
    <label>Brokerage Split</label>
    <referenceTo>Brokerage_Split__c</referenceTo>
    <relationshipLabel>Split Payees</relationshipLabel>
    <relationshipName>Split_Payees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>