force-app/main/default/objects/Split_Payee__c/fields/Company_Payee__c.field-meta.xml
<CustomField>
    <fullName>Company_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Payee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Split Payees</relationshipLabel>
    <relationshipName>Split_Payees</relationshipName>
    <type>Lookup</type>
</CustomField>