force-app/main/default/objects/Split_Payee__c/fields/Override_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Override_Percentage__c</fullName>
    <label>Override Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>