force-app/main/default/objects/Split_Payee__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Producer</referenceTo>
    <relationshipLabel>Split Payees</relationshipLabel>
    <relationshipName>Split_Payees</relationshipName>
    <type>Lookup</type>
</CustomField>