force-app/main/default/objects/Split_Payee__c/fields/Round_To_Payee__c.field-meta.xml
<CustomField>
    <fullName>Round_To_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Round To Payee</label>
    <type>Checkbox</type>
</CustomField>