force-app/main/default/objects/Split_Payee__c/fields/Service_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Service_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Split_Payees</relationshipName>
    <type>Lookup</type>
</CustomField>